// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListItem /> ListItem renders correctly both topLine and bottomLine 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 18,
      },
      Object {
        "borderTopColor": "#F0F0F0",
        "borderTopWidth": 1.6,
      },
      Object {
        "borderBottomColor": "#F0F0F0",
        "borderBottomWidth": 1.6,
      },
    ]
  }
>
  <Text.Secondary
    numberOfLines={1}
  >
    France
  </Text.Secondary>
  <Ionicons
    color="#9CA6A0"
    name="ios-chevron-forward-outline"
    size={14}
  />
</TouchableOpacity>
`;

exports[`<ListItem /> ListItem renders correctly wtesth bottomLine 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 18,
      },
      Object {
        "borderBottomColor": "#F0F0F0",
        "borderBottomWidth": 1.6,
      },
    ]
  }
>
  <Text.Secondary
    numberOfLines={1}
  >
    France
  </Text.Secondary>
  <Ionicons
    color="#9CA6A0"
    name="ios-chevron-forward-outline"
    size={14}
  />
</TouchableOpacity>
`;

exports[`<ListItem /> ListItem renders correctly wtesth topLine 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 18,
      },
      Object {
        "borderTopColor": "#F0F0F0",
        "borderTopWidth": 1.6,
      },
    ]
  }
>
  <Text.Secondary
    numberOfLines={1}
  >
    France
  </Text.Secondary>
  <Ionicons
    color="#9CA6A0"
    name="ios-chevron-forward-outline"
    size={14}
  />
</TouchableOpacity>
`;

exports[`<ListItem /> render 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 18,
      },
    ]
  }
>
  <Text.Secondary
    numberOfLines={1}
  >
    France
  </Text.Secondary>
  <Ionicons
    color="#9CA6A0"
    name="ios-chevron-forward-outline"
    size={14}
  />
</TouchableOpacity>
`;
